vpc.tf
### Configuration for custom VPC/networking
resource "aws_vpc" "main" {
  cidr_block           = "10.8.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "Tagioalisi Main VPC"
  }
}

resource "aws_subnet" "main" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.8.1.0/24"
  tags = {
    Name = "Tagioalisi Main Subnet"
  }
}

resource "aws_subnet" "rds_subnet1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.8.2.0/24"
  availability_zone = "us-east-1a"
}

resource "aws_subnet" "rds_subnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.8.3.0/24"
  availability_zone = "us-east-1b"
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Tagioalisi IGW"
  }
}

resource "aws_egress_only_internet_gateway" "eigw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "Tagioalisi EIGW"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
    egress_only_gateway_id = aws_egress_only_internet_gateway.eigw.id
  }
}

resource "aws_route_table_association" "main" {
  route_table_id = aws_route_table.main.id
  subnet_id      = aws_subnet.main.id
}
